--- a/network_diagram/project-files/dynamips/16362382-c49e-42b7-bbbc-c0e90b8a9a5a/configs/i3_startup-config.cfg
+++ b/network_diagram/project-files/dynamips/16362382-c49e-42b7-bbbc-c0e90b8a9a5a/configs/i3_startup-config.cfg
@@ -1,6 +1,4 @@
 !
-!
-!
 
 !
 version 12.4
@@ -8,7 +6,7 @@ service timestamps debug datetime msec
 service timestamps log datetime msec
 no service password-encryption
 !
-hostname R1
+hostname R3
 !
 boot-start-marker
 boot-end-marker
@@ -59,7 +57,7 @@ ip tcp synwait-time 5
 !
 !
 interface FastEthernet0/0
- ip address 193.137.100.126 255.255.255.128
+ ip address 193.137.101.252 255.255.255.0
  duplex auto
  speed auto
 !
@@ -69,7 +67,7 @@ interface Serial0/0
  clock rate 2000000
 !
 interface FastEthernet0/1
- ip address 193.137.101.254 255.255.255.0
+ ip address 10.5.2.62 255.255.255.192
  duplex auto
  speed auto
 !
@@ -80,6 +78,7 @@ interface FastEthernet1/0
  speed auto
 !
 ip forward-protocol nd
+ip route 193.137.100.0 255.255.255.128 193.137.101.254
 ip route 193.137.100.128 255.255.255.128 193.137.101.253
 !
 !
