--- a/Net_diagram/project-files/dynamips/f6d5a85e-f344-4f26-a911-60d8318c8a07/configs/i3_startup-config.cfg
+++ b/Net_diagram/project-files/dynamips/f6d5a85e-f344-4f26-a911-60d8318c8a07/configs/i3_startup-config.cfg
@@ -1,4 +1,6 @@
 !
+!
+!
 
 !
 version 12.4
@@ -84,7 +86,9 @@ ip route 193.137.100.128 255.255.255.128 193.137.101.253
 !
 no ip http server
 no ip http secure-server
+ip nat inside source list 30 interface FastEthernet0/0 overload
 !
+access-list 30 permit 10.5.2.0 0.0.0.63
 no cdp log mismatch duplex
 !
 !
