--- a/code/makefile
+++ b/code/makefile
@@ -1,8 +1,8 @@
 CC = gcc
 LIBS = -lm
 FLAGS = -Wall -pthread -g
-PROGS = server
-OBJS = server.o admin_functions.o
+PROGS = server client
+OBJS = server.o admin_functions.o client.o
 
 all: ${PROGS}
 
@@ -12,11 +12,16 @@ clean:
 server: server.o admin_functions.o
 	${CC} ${FLAGS} $^ ${LIBS} -o $@
 
+client: client.o admin_functions.o
+	${CC} ${FLAGS} $^ ${LIBS} -o $@
+
 %.o: %.c
 	${CC} ${FLAGS} -c $< -o $@
 
 ##########################
 
 server.o: server.c admin_functions.h
+
+client.o: client.c admin_functions.h
 
 admin_functions.o: admin_functions.c admin_functions.h
